--- a/labs/lab5/lab5.qmd
+++ b/labs/lab5/lab5.qmd
@@ -1,1 +1,11 @@
 ## Lab 5:
+
+### Introduction
+
+### Design and Testing Methodology
+
+### Technical Documentation
+
+### Results and Discussion
+
+### Conclusion
