--- a/labs/lab7/lab7.qmd
+++ b/labs/lab7/lab7.qmd
@@ -1,1 +1,11 @@
 ## Lab 7: The Advanced Encryption Standard
+
+### Introduction
+
+### Design and Testing Methodology
+
+### Technical Documentation
+
+### Results and Discussion
+
+### Conclusion
