--- a/labs/lab3/lab3.qmd
+++ b/labs/lab3/lab3.qmd
@@ -1,1 +1,11 @@
 ## Lab 3: Keypad Scanner
+
+### Introduction
+
+### Design and Testing Methodology
+
+### Technical Documentation
+
+### Results and Discussion
+
+### Conclusion
